--- a/OneDrive/Desktop/bst-website/package.json
+++ b/OneDrive/Desktop/bst-website/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@types/styled-components": "^5.1.34",
     "next": "15.3.4",
     "react": "^19.0.0",
