--- a/OneDrive/Desktop/bst-website/package.json
+++ b/OneDrive/Desktop/bst-website/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@types/styled-components": "^5.1.34",
+    "critters": "^0.0.23",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
